# msfl-world

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  main.cpp  proima.cpp  shader_test.cpp  shader_view.cpp
include/wrld/: App.hpp  Main.hpp  System.hpp  World.hpp  builtins.hpp  concepts.hpp  logs.hpp
include/wrld-gui/: components.hpp  resources.hpp
include/wrld/components/: Camera.hpp  Camera3D.hpp  CameraShader.hpp  Component.hpp  Component.tpp  DirectionalLight.hpp  Environment.hpp  FPSControl.hpp  Orbiter.hpp  PointLight.hpp  StaticModel.hpp  Transform.hpp
include/wrld/resources/: CubemapTexture.hpp  DeferredFramebuffer.hpp  Framebuffer.hpp  Material.hpp  Mesh.hpp  Model.hpp  Program.hpp  Rc.hpp  Rc.tpp  Resource.hpp  Resource.tpp  Texture.hpp  WindowFramebuffer.hpp
include/wrld/shaders/: deferred_pass2_shader.hpp  skybox_shader.hpp
include/wrld/shaders/fragment/: default_shader.hpp  deferred_pass1_shader.hpp
include/wrld/shaders/vertex/: default_shader.hpp
include/wrld/systems/: DeferredRendererSystem.hpp  RendererSystem.hpp
include/wrld/tools/: Geometry.hpp  ModelTool.hpp
lib/assimp-6.0.2/: Build.md
lib/assimp-6.0.2/contrib/pugixml/: CMakeLists.txt
lib/assimp-6.0.2/contrib/zip/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm/: CMakeLists.txt
lib/imgui-1.92.2b/: CMakeLists.txt
lib/stb_image/: stb_image.cpp  stb_image.hpp
modgeom/: modgeom.cpp
src/: Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  Program.cpp  Program.hpp  System.cpp  Texture.cpp  Texture.hpp  World.hpp  main.cpp
src/cmpnt/: Transform.cpp  Transform.hpp
src/components/: CameraComponent.cpp  CameraComponent.hpp  ModelComponent.cpp  ModelComponent.hpp  TransformComponent.hpp
src/resources/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Program.hpp  Texture.cpp  Texture.hpp
src/shaders/: default_program.glsl  fragment.glsl  program.glsl
src/systems/: RendererSystem.cpp  RendererSystem.hpp
src/wrld/: Main.cpp  System.cpp  World.cpp  builtins.cpp
src/wrld-gui/: components.cpp  resources.cpp
src/wrld/components/: Camera.cpp  Camera3D.cpp  CameraShader.cpp  Component.cpp  DirectionalLight.cpp  Environment.cpp  FPSControl.cpp  Orbiter.cpp  PointLight.cpp  StaticModel.cpp  Transform.cpp
src/wrld/resources/: CubemapTexture.cpp  DeferredFramebuffer.cpp  Framebuffer.cpp  Material.cpp  Mesh.cpp  Model.cpp  Program.cpp  Rc.cpp  Resource.cpp  Texture.cpp  WindowFramebuffer.cpp
src/wrld/shaders/: deferred_pass2.glsl
src/wrld/shaders/fragment/: default.glsl  toonshading.glsl
src/wrld/shaders/vertex/: default.glsl
src/wrld/systems/: DeferredRendererSystem.cpp  RendererSystem.cpp
src/wrld/tools/: Geometry.cpp  ModelTool.cpp
wrld/: App.hpp  Camera.cpp  Camera.hpp  Logs.hpp  Main.cpp  Main.hpp  System.hpp  World.cpp  World.hpp  builtins.cpp  builtins.hpp  main.cpp
wrld-gui/: components.cpp  components.hpp  resources.cpp  resources.hpp
wrld/components/: Camera.cpp  Camera.hpp  CameraComponent.cpp  CameraComponent.hpp  Component.cpp  Component.hpp  Component.hpp.old  Component.tpp  DebugMove.cpp  DebugMove.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Environment.cpp  Environment.hpp  FPSControl.cpp  FPSControl.hpp  ModelComponent.cpp  Orbiter.cpp  Orbiter.hpp  PointLight.cpp  PointLight.hpp  PointLightComponent.cpp  PointLightComponent.hpp  StaticModel.cpp  StaticModel.hpp  Transform.cpp  Transform.hpp  TransformComponent.cpp  TransformComponent.hpp
wrld/resources/: CubemapTexture.cpp  CubemapTexture.hpp  DeferredFramebuffer.cpp  DeferredFramebuffer.hpp  Framebuffer.cpp  Framebuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Program.cpp  Program.hpp  Rc.cpp  Rc.hpp  Rc.hpp.old  Rc.tpp  Resource.cpp  Resource.hpp  Resource.hpp.old  Resource.tpp  Texture.cpp  Texture.hpp  Viewport.cpp  Viewport.hpp  WindowFramebuffer.cpp  WindowViewport.cpp  WindowViewport.hpp
wrld/shaders/: combined.glsl  deferred_pass2.glsl  model.glsl  program.glsl  skybox.glsl
wrld/shaders/fragment/: basic.glsl  default.glsl  default.glsl.old  deferred_pass1.glsl  depth.glsl  no-light.glsl  skybox.glsl
wrld/shaders/vertex/: basic.glsl  default.glsl  skybox.glsl
wrld/systems/: DeferredRendererSystem.cpp  DeferredRendererSystem.hpp  RendererSystem.cpp  RendererSystem.hpp
